# LookingSecureBrowser

./: .env.example  .gitignore  AIEngine.md  README.md  main.py  pyproject.toml
core/: header_analyzer.py  mitre_attack_mapper.py  network_interceptor.py  traffic_ai_engine.py  virustotal_url_scanner.py
scripts/: evaluate_traffic_ai.py
tests/: test_traffic_ai_engine.py  traffic_ai_fixtures.py
ui/: main_window.py  theme.qss
