[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "looking-secure-browser"
version = "0.1.0"
description = "Security-focused Python web browser prototype built with PySide6 and Qt WebEngine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.11.1",
    "httpx==0.28.1",
]

[project.scripts]
looking-secure-browser = "main:main"

[tool.setuptools]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["core*", "ui*"]
namespaces = true

[tool.setuptools.package-data]
ui = ["*.qss"]
